<resources>
    <string name="app_name">HealthZone</string>

    <!-- Menu actions -->
    <string name="action_account">Cuenta</string>
    <string name="action_home">Inicio</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_map">Mapa</string>
    <string name="action_appointments">Citas</string>
    <string name="action_prescriptions">Recetas</string>
    <string name="action_logout">Cerrar sesión</string>

    <!-- General actions -->
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_show_more">Ver más</string>
    <string name="action_continue">Continuar</string>
    <string name="action_back">Atrás</string>
    <string name="action_ok">Ok</string>

    <string name="action_complete">Completar</string>
    <string name="action_uncomplete">Descompletar</string>
    <string name="action_add_appointment">Añadir cita</string>
    <string name="action_add_prescription">Añadir receta</string>
    <string name="action_add_medicine">Añadir medicina</string>

    <!-- Title strings -->
    <string name="title_activity_login">Login</string>
    <string name="title_appointment_details">Detalles</string>
    <string name="title_register_doctor">Registrar médico</string>
    <string name="title_register_patient">Registrar paciente</string>
    <string name="title_prescriptions">Recetas médicas</string>
    <string name="title_delete_prescription_dialog">Eliminar receta médica</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="preference_file_key">com.jezerm.healthzone.preference_key</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Register/Login-->
    <string name="user">Usuario</string>
    <string name="age">Edad</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="prompt_sex">Sexo</string>
    <string name="cellphone">Teléfono</string>
    <string name="specialty">Especialidad</string>
    <string name="email">E-mail</string>
    <string name="work_place">Lugar de trabajo</string>
    <string name="prompt_first_name">Primer nombre</string>
    <string name="prompt_lastname">Apellidos</string>
    <string name="prompt_middle_name">Segundo nombre</string>
    <string name="register_succeeded">Registro completado</string>
    <string name="register_succeeded_message">Su usuario fue registrado con éxito.</string>
    <string name="prompt_age">Edad</string>
    <string name="prompt_weight">Peso (kg)</string>
    <string name="prompt_height">Altura (cm)</string>
    <string name="prompt_conditions">Condiciones</string>

    <!--Prescriptions-->
    <string name="medicine_quantity">Cantidad: %1$d</string>
    <string name="prescription_size_quantity">Medicinas: %1$d</string>
    <string name="delete_prescription_message">¿Estás seguro/a de eliminar esta receta médica? Esto no se puede deshacer.</string>
    <string name="chip_completed">Completados</string>

    <!--Settings-->
    <string name="settings">Test</string>
    <string name="options_dark">Oscuro</string>
    <string name="options_light">Claro</string>
    <string name="options_automatic">Automático</string>
    <string-array name="options">
        <item>@string/options_dark</item>
        <item>@string/options_light</item>
        <item>@string/options_automatic</item>
    </string-array>

    <!-- Location -->
    <string name="location_permission_denied">No se permitió obtener la localización</string>
    <string name="permission_required_toast">Se requiere activar la localización</string>
    <string name="permission_rationale_location">HealthZone requiere de los permisos de localización para poder encontrar los centros médicos más cercanos a ti. Esto lo hacemos para mejorar su experiencia.</string>

    <string name="sex_male">Hombre</string>
    <string name="sex_female">Mujer</string>
    <string name="title_prescription_details">Detalles de la receta</string>
    <string-array name="sex">
        <item>@string/sex_male</item>
        <item>@string/sex_female</item>
    </string-array>

</resources>