<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_patient"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jezerm.healthzone.ui.patient.HomeFragment"
        android:label="@string/action_home"
        tools:layout="@layout/fragment_home_patient" />
    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.jezerm.healthzone.ui.patient.AppointmentsFragment"
        android:label="@string/action_appointments"
        tools:layout="@layout/fragment_appointments_patient" >
        <action
            android:id="@+id/action_appointments_to_details"
            app:destination="@id/navigation_appointment_details"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.jezerm.healthzone.ui.patient.MapsFragment"
        android:label="@string/action_map"
        tools:layout="@layout/fragment_maps_patient" />
    <fragment
        android:id="@+id/navigation_appointment_details"
        android:name="com.jezerm.healthzone.ui.patient.appointment.AppointmentDetailsFragment"
        android:label="@string/title_appointment_details"
        tools:layout="@layout/fragment_appointment_details">
        <argument
            android:name="appointment"
            app:argType="com.jezerm.healthzone.entities.Appointment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jezerm.healthzone.ui.patient.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>